# backtest_crypto

./: .deepsource.toml  .gitignore  README.rst  changelog.rst  pip_requirements  pyproject.toml  setup.py
backtest_crypto/: version.py
backtest_crypto/graphics/: build_graph.py  plot_graph.py
backtest_crypto/history_collect/: clean_history.py  dataarray.py  gather_history.py
backtest_crypto/utilities/: data_structs.py  general.py  iterators.py
backtest_crypto/verify/: gather.py  gather_overall.py  identify.py  identify_potential_coins.py  individual_indicator_calculator.py  predict.py  simulate.py  simulate_success.py  simulate_timesteps.py
database/: 25_Jan_2017_TO_18_Nov_2020_BTC_1d.db  25_Jan_2017_TO_18_Nov_2020_BTC_1h.db
examples/: 3d_percentage_iter.py  calculate_timestep_compare.py  combine_pickled_data.py  data_ranges.py  merge_sqlite_pieces.py  pickle_individual_indicator.py  pickle_simulate_march_in_time.py  pickled_potential_pickle_simulate_march_in_time.py  plot_pickled_data.py  plot_surface_graph.py  result_dataset_iteration.py  simulate_march_in_time.py  store_potential_coins_on_disk.py  surface_graph_percentage_increase_reduction.py
